@@ -1,3 +1,8 @@
+1904-01-08  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/menus.c (MenuInteraction):
+	tried to fix core dump w/ windowlist
+
 2000-01-09  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm/fvwm.c (main):
